--- a/applications/ls/Cargo.toml
+++ b/applications/ls/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Christine Wang <chrissywang54@gmail.com>"]
 
 [dependencies]
 getopts = "0.2.21"
+regex = "1.10.2"
 
 [dependencies.log]
 version = "0.4.8"
